--- a/docs/stat565/hw_stat565.Rmd
+++ b/docs/stat565/hw_stat565.Rmd
@@ -558,22 +558,36 @@ and only three trials can be run on any day. Because days could represent a pote
 are taken for four days, and the data are shown here. Analyze the data from this experiment (use $\alpha = 0.05$) and draw conclusions.
 
 ```{r include=FALSE}
+library(readxl)
+library(tidyverse)
+require(ggplot2)
+library(agricolae) #LSD.test
+library(asbio) #pairw.anova
+```
+
+```{r include=FALSE}
 table_wash <- read_xlsx("Exercise4_4.xlsx")
+table_wash$Days <- as.factor(table_wash$Days)
+ggplot(table_wash,aes(Solution,Response,lty=Days))+geom_line()+theme(legend.position = c(0.9, 0.85))
+table_wash$Solution <- as.factor(table_wash$Solution)
 glimpse(table_wash)
-table_wash %>% ggplot(aes(Solution,Response))+geom_line(aes(Solution,Response,lty=as.factor(Days)))+theme(legend.position = c(0.9, 0.85))
 ```
 
 ```{r echo=T, collapse=TRUE}
-
-
-model_wash <- aov(Response~Solution+Days, data=table_wash)
+model_wash <- lm(Response~Solution+Days, data=table_wash)
 summary(model_wash)
+(LSD.test(model_wash, trt="Solution",alpha = 0.05))
+pairw.anova(table_wash$Response,table_wash$Solution, conf.level = 0.95, method = "lsd", MSE = NULL, df.err = NULL, control = NULL)
+pairw.anova(table_wash$Response,table_wash$Solution, conf.level = 0.95, method = "tukey", MSE = NULL, df.err = NULL, control = NULL)
 ```
 
  ---
 
 4.29 Consider the randomized complete block design in Problem 4.9. Assume that the days are random. Estimate the block variance component.
 
+```{r echo=T, collapse=TRUE}
+summary(aov(Response~Solution+Days, data=table_wash))
+```
 
 ### Problem 2 (4.13)
 
@@ -582,15 +596,17 @@ The company decides to test the three designs by mailing 5000 samples of each to
 
 ```{r include=FALSE}
 table_mail <- read_xlsx("Exercise4_8.xlsx")
+table_mail$Region <- as.factor(table_mail$Region)
+table_mail %>% ggplot(aes(Design,Response))+geom_line(aes(Design,Response,lty=Region))+theme(legend.position = c(0.85, 0.85))
+table_mail$Design <- as.factor(table_mail$Design)
 glimpse(table_mail)
-table_mail %>% ggplot(aes(Design,Response))+geom_line(aes(Design,Response,lty=as.factor(Region)))+theme(legend.position = c(0.9, 0.85))
 ```
 
 
 (a) Analyze the data from this experiment.
 
 ```{r echo=T, collapse=TRUE}
-model_mail <- aov(Response~Design+Region, data=table_mail)
+model_mail <- lm(Response~Design+Region, data=table_mail)
 summary(model_mail)
 ```
 
@@ -600,7 +616,7 @@ summary(model_mail)
 
 ```{r echo=T,collapse=TRUE}
 (LSD.test(model_mail, trt="Design",alpha = 0.05))
-pairw.anova(table_mail$Response,as.factor(table_mail$Design), conf.level = 0.95, method = "lsd", MSE = NULL, df.err = NULL, control = NULL)
+pairw.anova(table_mail$Response,table_mail$Design, conf.level = 0.95, method = "lsd", MSE = NULL, df.err = NULL, control = NULL)
 ``` 
 
  ---
@@ -615,8 +631,10 @@ pairw.anova(table_mail$Response,as.factor(table_mail$Design), conf.level = 0.95,
  - The Bartlett’s test shows variances across samples are not different. 
 
 ```{r echo=T,collapse=TRUE, out.width='45%'}
-plot(model_mail)
-ols_plot_diagnostics(lm(Response~Design+Region, data=table_mail))
+plot(aov(Response~Design+Region, data=table_mail))
+plot(aov(Response~Region+Design, data=table_mail))
+
+# ols_plot_diagnostics(model_mail)
 # bartlett.test(Response~Design+Region, data=table_mail)
 ```
 
