--- a/docs/stat565/hw_stat565.Rmd
+++ b/docs/stat565/hw_stat565.Rmd
@@ -565,7 +565,7 @@ library(agricolae) #LSD.test
 library(asbio) #pairw.anova
 ```
 
-```{r echo=FALSE}
+```{r echo=FALSE, out.width='45%'}
 table_wash <- read_xlsx("Exercise4_4.xlsx")
 table_wash$Days <- as.factor(table_wash$Days)
 ggplot(table_wash,aes(Solution,Response,lty=Days))+geom_line()+theme(legend.position = c(0.9, 0.85))
@@ -596,7 +596,7 @@ summary(aov(Response~Solution+Error(Days), data=table_wash))
 A consumer products company relies on direct mail marketing pieces as a major component of its advertising campaigns. The company has three different designs for a new brochure and wants to evaluate their effectiveness, as there are substantial differences in costs between the three designs.
 The company decides to test the three designs by mailing 5000 samples of each to potential customers in four different regions of the country. Since there are known regional differences in the customer base, regions are considered as blocks. The number of responses to each mailing is as follows.
 
-```{r echo=FALSE}
+```{r echo=FALSE, out.width='45%'}
 table_mail <- read_xlsx("Exercise4_8.xlsx")
 table_mail$Region <- as.factor(table_mail$Region)
 table_mail %>% ggplot(aes(Design,Response))+geom_line(aes(Design,Response,lty=Region))+theme(legend.position = c(0.85, 0.85))
@@ -632,7 +632,7 @@ pairw.anova(table_mail$Response,table_mail$Design, conf.level = 0.95, method = "
  - The residuals versus observation number shows the residuals are independent with each other.
  - The Bartlett’s test shows variances across samples are not different. 
 
-```{r echo=T,collapse=TRUE, out.width='45%'}
+```{r echo=T,collapse=TRUE, out.width='24%'}
 plot(aov(Response~Design+Region, data=table_mail))
 plot(aov(Response~Region+Design, data=table_mail))
 ```
