--- a/docs/stat565/hw_stat565.Rmd
+++ b/docs/stat565/hw_stat565.Rmd
@@ -580,6 +580,9 @@ summary(model_wash)
 (LSD.test(model_wash, trt="Solution",alpha = 0.05))
 pairw.anova(table_wash$Response,table_wash$Solution, conf.level = 0.95, method = "lsd", MSE = NULL, df.err = NULL, control = NULL)
 pairw.anova(table_wash$Response,table_wash$Solution, conf.level = 0.95, method = "tukey", MSE = NULL, df.err = NULL, control = NULL)
+(LSD.test(aov(Response~Days+Solution, data=table_wash), trt="Days",alpha = 0.05))
+pairw.anova(table_wash$Response,table_wash$Days, conf.level = 0.95, method = "lsd", MSE = NULL, df.err = NULL, control = NULL)
+pairw.anova(table_wash$Response,table_wash$Days, conf.level = 0.95, method = "tukey", MSE = NULL, df.err = NULL, control = NULL)
 ```
 
  ---
@@ -588,7 +591,6 @@ pairw.anova(table_wash$Response,table_wash$Solution, conf.level = 0.95, method =
 
 ```{r echo=T, collapse=TRUE}
 summary(aov(Response~Solution+Error(Days), data=table_wash))
-
 ```
 
 ### Problem 2 (4.13)
@@ -619,6 +621,9 @@ summary(model_mail)
 ```{r echo=T,collapse=F}
 (LSD.test(model_mail, trt="Design",alpha = 0.05))
 pairw.anova(table_mail$Response,table_mail$Design, conf.level = 0.95, method = "lsd", MSE = NULL, df.err = NULL, control = NULL)
+
+(LSD.test(model_mail, trt="Region",alpha = 0.05))
+pairw.anova(table_mail$Response,table_mail$Region, conf.level = 0.95, method = "lsd", MSE = NULL, df.err = NULL, control = NULL)
 ``` 
 
  ---
