--- a/docs/stat565/hw_stat565.Rmd
+++ b/docs/stat565/hw_stat565.Rmd
@@ -577,12 +577,18 @@ glimpse(table_wash)
 model_wash <- lm(Response~Solution+Days, data=table_wash)
 summary(aov(Response~Solution+Days, data=table_wash))
 summary(model_wash)
-(LSD.test(model_wash, trt="Solution",alpha = 0.05))
+# (LSD.test(model_wash, trt="Solution",alpha = 0.05))
 pairw.anova(table_wash$Response,table_wash$Solution, conf.level = 0.95, method = "lsd", MSE = NULL, df.err = NULL, control = NULL)
 pairw.anova(table_wash$Response,table_wash$Solution, conf.level = 0.95, method = "tukey", MSE = NULL, df.err = NULL, control = NULL)
-(LSD.test(aov(Response~Days+Solution, data=table_wash), trt="Days",alpha = 0.05))
-pairw.anova(table_wash$Response,table_wash$Days, conf.level = 0.95, method = "lsd", MSE = NULL, df.err = NULL, control = NULL)
+pairw.anova(table_wash$Response,table_wash$Solution, conf.level = 0.95, method = "lsd", MSE = NULL, df.err = 6, control = NULL)
+pairw.anova(table_wash$Response,table_wash$Solution, conf.level = 0.95, method = "tukey", MSE = NULL, df.err = 6, control = NULL)
+
+# (LSD.test(aov(Response~Days+Solution, data=table_wash), trt="Days",alpha = 0.05))
+pairw.anova(table_wash$Response,table_wash$Days, conf.level = 0.95, method = "lsd", MSE = NULL, df.err = null, control = NULL)
 pairw.anova(table_wash$Response,table_wash$Days, conf.level = 0.95, method = "tukey", MSE = NULL, df.err = NULL, control = NULL)
+pairw.anova(table_wash$Response,table_wash$Days, conf.level = 0.95, method = "lsd", MSE = NULL, df.err = 6, control = NULL)
+pairw.anova(table_wash$Response,table_wash$Days, conf.level = 0.95, method = "tukey", MSE = NULL, df.err = 6, control = NULL)
+
 ```
 
  ---
