--- a/docs/stat565/hw_stat565.Rmd
+++ b/docs/stat565/hw_stat565.Rmd
@@ -574,20 +574,18 @@ glimpse(table_wash)
 ```
 
 ```{r echo=T, collapse=F}
-model_wash <- lm(Response~Solution+Days, data=table_wash)
-summary(aov(Response~Solution+Days, data=table_wash))
+model_wash <- aov(Response~Solution+Days, data=table_wash)
 summary(model_wash)
-# (LSD.test(model_wash, trt="Solution",alpha = 0.05))
+summary.lm(model_wash)
+(LSD.test(model_wash, trt="Solution",alpha = 0.05,p.adj="bonferroni"))
+(LSD.test(aov(Response~Days+Solution, data=table_wash), trt="Days",alpha = 0.05,p.adj="bonferroni"))
+TukeyHSD(model_wash,conf.level = 0.95)
+
 pairw.anova(table_wash$Response,table_wash$Solution, conf.level = 0.95, method = "lsd", MSE = NULL, df.err = NULL, control = NULL)
 pairw.anova(table_wash$Response,table_wash$Solution, conf.level = 0.95, method = "tukey", MSE = NULL, df.err = NULL, control = NULL)
-pairw.anova(table_wash$Response,table_wash$Solution, conf.level = 0.95, method = "lsd", MSE = NULL, df.err = 6, control = NULL)
-pairw.anova(table_wash$Response,table_wash$Solution, conf.level = 0.95, method = "tukey", MSE = NULL, df.err = 6, control = NULL)
 
-# (LSD.test(aov(Response~Days+Solution, data=table_wash), trt="Days",alpha = 0.05))
 pairw.anova(table_wash$Response,table_wash$Days, conf.level = 0.95, method = "lsd", MSE = NULL, df.err = NULL, control = NULL)
 pairw.anova(table_wash$Response,table_wash$Days, conf.level = 0.95, method = "tukey", MSE = NULL, df.err = NULL, control = NULL)
-pairw.anova(table_wash$Response,table_wash$Days, conf.level = 0.95, method = "lsd", MSE = NULL, df.err = 6, control = NULL)
-pairw.anova(table_wash$Response,table_wash$Days, conf.level = 0.95, method = "tukey", MSE = NULL, df.err = 6, control = NULL)
 
 ```
 
