--- a/docs/stat565/hw_stat565.Rmd
+++ b/docs/stat565/hw_stat565.Rmd
@@ -577,8 +577,8 @@ glimpse(table_wash)
 model_wash <- aov(Response~Solution+Days, data=table_wash)
 summary(model_wash)
 summary.lm(model_wash)
-(LSD.test(model_wash, trt="Solution",alpha = 0.05,p.adj="bonferroni"))
-(LSD.test(aov(Response~Days+Solution, data=table_wash), trt="Days",alpha = 0.05,p.adj="bonferroni"))
+# (LSD.test(model_wash, trt="Solution",alpha = 0.05,p.adj="bonferroni"))
+#(LSD.test(aov(Response~Days+Solution, data=table_wash), trt="Days",alpha = 0.05,p.adj="bonferroni"))
 TukeyHSD(model_wash,conf.level = 0.95)
 
 pairw.anova(table_wash$Response,table_wash$Solution, conf.level = 0.95, method = "lsd", MSE = NULL, df.err = NULL, control = NULL)
@@ -614,8 +614,9 @@ glimpse(table_mail)
 (a) Analyze the data from this experiment.
 
 ```{r echo=T, collapse=F}
-model_mail <- lm(Response~Design+Region, data=table_mail)
+model_mail <- aov(Response~Design+Region, data=table_mail)
 summary(model_mail)
+summary.lm(model_mail)
 ```
 
  ---
@@ -623,10 +624,10 @@ summary(model_mail)
 (b) Use the Fisher LSD method to make comparisons among the three designs to determine specifically which designs differ in the mean response rate.
 
 ```{r echo=T,collapse=F}
-(LSD.test(model_mail, trt="Design",alpha = 0.05))
+(LSD.test(model_mail, trt="Design",alpha = 0.05,p.adj="bonferroni"))
 pairw.anova(table_mail$Response,table_mail$Design, conf.level = 0.95, method = "lsd", MSE = NULL, df.err = NULL, control = NULL)
 
-(LSD.test(model_mail, trt="Region",alpha = 0.05))
+(LSD.test(model_mail, trt="Region",alpha = 0.05,p.adj="bonferroni"))
 pairw.anova(table_mail$Response,table_mail$Region, conf.level = 0.95, method = "lsd", MSE = NULL, df.err = NULL, control = NULL)
 ``` 
 
